aule/generated/luaParser.py
# Generated from lua.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class luaParser ( Parser ):

    grammarFileName = "lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'break'", "'goto'", "'do'", 
                     "'end'", "'while'", "'repeat'", "'until'", "'if'", 
                     "'then'", "'elseif'", "'else'", "'for'", "','", "'in'", 
                     "'function'", "'local'", "'return'", "'::'", "'.'", 
                     "':'", "'nil'", "'false'", "'true'", "'...'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", 
                     "'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", "'|'", 
                     "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", 
                      "WS", "SHEBANG" ]

    RULE_root = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_retstat = 3
    RULE_label = 4
    RULE_funcname = 5
    RULE_varlist = 6
    RULE_namelist = 7
    RULE_explist = 8
    RULE_exp = 9
    RULE_prefixexp = 10
    RULE_functioncall = 11
    RULE_varOrExp = 12
    RULE_var = 13
    RULE_varSuffix = 14
    RULE_nameAndArgs = 15
    RULE_args = 16
    RULE_functiondef = 17
    RULE_funcbody = 18
    RULE_parlist = 19
    RULE_tableconstructor = 20
    RULE_fieldlist = 21
    RULE_field = 22
    RULE_fieldsep = 23
    RULE_operatorOr = 24
    RULE_operatorAnd = 25
    RULE_operatorComparison = 26
    RULE_operatorStrcat = 27
    RULE_operatorAddSub = 28
    RULE_operatorMulDivMod = 29
    RULE_operatorBitwise = 30
    RULE_operatorUnary = 31
    RULE_operatorPower = 32
    RULE_number = 33
    RULE_string = 34

    ruleNames =  [ "root", "block", "stat", "retstat", "label", "funcname", 
                   "varlist", "namelist", "explist", "exp", "prefixexp", 
                   "functioncall", "varOrExp", "var", "varSuffix", "nameAndArgs", 
                   "args", "functiondef", "funcbody", "parlist", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                   "operatorPower", "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    NAME=56
    NORMALSTRING=57
    CHARSTRING=58
    LONGSTRING=59
    INT=60
    HEX=61
    FLOAT=62
    HEX_FLOAT=63
    COMMENT=64
    LINE_COMMENT=65
    WS=66
    SHEBANG=67

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(luaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(luaParser.EOF, 0)

        def getRuleIndex(self):
            return luaParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = luaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.block()
            self.state = 71
            self.match(luaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(luaParser.StatContext)
            else:
                return self.getTypedRuleContext(luaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(luaParser.RetstatContext,0)


        def getRuleIndex(self):
            return luaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = luaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << luaParser.T__0) | (1 << luaParser.T__2) | (1 << luaParser.T__3) | (1 << luaParser.T__4) | (1 << luaParser.T__6) | (1 << luaParser.T__7) | (1 << luaParser.T__9) | (1 << luaParser.T__13) | (1 << luaParser.T__16) | (1 << luaParser.T__17) | (1 << luaParser.T__19) | (1 << luaParser.T__26) | (1 << luaParser.NAME))) != 0):
                self.state = 73
                self.stat()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==luaParser.T__18:
                self.state = 79
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(luaParser.VarlistContext,0)


        def explist(self):
            return self.getTypedRuleContext(luaParser.ExplistContext,0)


        def functioncall(self):
            return self.getTypedRuleContext(luaParser.FunctioncallContext,0)


        def label(self):
            return self.getTypedRuleContext(luaParser.LabelContext,0)


        def NAME(self):
            return self.getToken(luaParser.NAME, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(luaParser.BlockContext)
            else:
                return self.getTypedRuleContext(luaParser.BlockContext,i)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(luaParser.ExpContext)
            else:
                return self.getTypedRuleContext(luaParser.ExpContext,i)


        def namelist(self):
            return self.getTypedRuleContext(luaParser.NamelistContext,0)


        def funcname(self):
            return self.getTypedRuleContext(luaParser.FuncnameContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(luaParser.FuncbodyContext,0)


        def getRuleIndex(self):
            return luaParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = luaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.match(luaParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.varlist()
                self.state = 84
                self.match(luaParser.T__1)
                self.state = 85
                self.explist()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.functioncall()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(luaParser.T__2)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.match(luaParser.T__3)
                self.state = 91
                self.match(luaParser.NAME)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 92
                self.match(luaParser.T__4)
                self.state = 93
                self.block()
                self.state = 94
                self.match(luaParser.T__5)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 96
                self.match(luaParser.T__6)
                self.state = 97
                self.exp(0)
                self.state = 98
                self.match(luaParser.T__4)
                self.state = 99
                self.block()
                self.state = 100
                self.match(luaParser.T__5)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 102
                self.match(luaParser.T__7)
                self.state = 103
                self.block()
                self.state = 104
                self.match(luaParser.T__8)
                self.state = 105
                self.exp(0)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 107
                self.match(luaParser.T__9)
                self.state = 108
                self.exp(0)
                self.state = 109
                self.match(luaParser.T__10)
                self.state = 110
                self.block()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==luaParser.T__11:
                    self.state = 111
                    self.match(luaParser.T__11)
                    self.state = 112
                    self.exp(0)
                    self.state = 113
                    self.match(luaParser.T__10)
                    self.state = 114
                    self.block()
                    self.state = 120
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==luaParser.T__12:
                    self.state = 121
                    self.match(luaParser.T__12)
                    self.state = 122
                    self.block()


                self.state = 125
                self.match(luaParser.T__5)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 127
                self.match(luaParser.T__13)
                self.state = 128
                self.match(luaParser.NAME)
                self.state = 129
                self.match(luaParser.T__1)
                self.state = 130
                self.exp(0)
                self.state = 131
                self.match(luaParser.T__14)
                self.state = 132
                self.exp(0)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==luaParser.T__14:
                    self.state = 133
                    self.match(luaParser.T__14)
                    self.state = 134
                    self.exp(0)


                self.state = 137
                self.match(luaParser.T__4)
                self.state = 138
                self.block()
                self.state = 139
                self.match(luaParser.T__5)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 141
                self.match(luaParser.T__13)
                self.state = 142
                self.namelist()
                self.state = 143
                self.match(luaParser.T__15)
                self.state = 144
                self.explist()
                self.state = 145
                self.match(luaParser.T__4)
                self.state = 146
                self.block()
                self.state = 147
                self.match(luaParser.T__5)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 149
                self.match(luaParser.T__16)
                self.state = 150
                self.funcname()
                self.state = 151
                self.funcbody()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 153
                self.match(luaParser.T__17)
                self.state = 154
                self.match(luaParser.T__16)
                self.state = 155
                self.match(luaParser.NAME)
                self.state = 156
                self.funcbody()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 157
                self.match(luaParser.T__17)
                self.state = 158
                self.namelist()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==luaParser.T__1:
                    self.state = 159
                    self.match(luaParser.T__1)
                    self.state = 160
                    self.explist()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(luaParser.ExplistContext,0)


        def getRuleIndex(self):
            return luaParser.RULE_retstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetstat" ):
                listener.enterRetstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetstat" ):
                listener.exitRetstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetstat" ):
                return visitor.visitRetstat(self)
            else:
                return visitor.visitChildren(self)




    def retstat(self):

        localctx = luaParser.RetstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_retstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(luaParser.T__18)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << luaParser.T__16) | (1 << luaParser.T__22) | (1 << luaParser.T__23) | (1 << luaParser.T__24) | (1 << luaParser.T__25) | (1 << luaParser.T__26) | (1 << luaParser.T__30) | (1 << luaParser.T__42) | (1 << luaParser.T__49) | (1 << luaParser.T__52) | (1 << luaParser.T__53) | (1 << luaParser.NAME) | (1 << luaParser.NORMALSTRING) | (1 << luaParser.CHARSTRING) | (1 << luaParser.LONGSTRING) | (1 << luaParser.INT) | (1 << luaParser.HEX) | (1 << luaParser.FLOAT) | (1 << luaParser.HEX_FLOAT))) != 0):
                self.state = 166
                self.explist()


            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==luaParser.T__0:
                self.state = 169
                self.match(luaParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LabelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(luaParser.NAME, 0)

        def getRuleIndex(self):
            return luaParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = luaParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(luaParser.T__19)
            self.state = 173
            self.match(luaParser.NAME)
            self.state = 174
            self.match(luaParser.T__19)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(luaParser.NAME)
            else:
                return self.getToken(luaParser.NAME, i)

        def getRuleIndex(self):
            return luaParser.RULE_funcname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncname" ):
                listener.enterFuncname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncname" ):
                listener.exitFuncname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncname" ):
                return visitor.visitFuncname(self)
            else:
                return visitor.visitChildren(self)




    def funcname(self):

        localctx = luaParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.match(luaParser.NAME)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==luaParser.T__20:
                self.state = 177
                self.match(luaParser.T__20)
                self.state = 178
                self.match(luaParser.NAME)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==luaParser.T__21:
                self.state = 184
                self.match(luaParser.T__21)
                self.state = 185
                self.match(luaParser.NAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(luaParser.VarContext)
            else:
                return self.getTypedRuleContext(luaParser.VarContext,i)


        def getRuleIndex(self):
            return luaParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = luaParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 188
            self.var()
            self.state = 193
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==luaParser.T__14:
                self.state = 189
                self.match(luaParser.T__14)
                self.state = 190
                self.var()
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(luaParser.NAME)
            else:
                return self.getToken(luaParser.NAME, i)

        def getRuleIndex(self):
            return luaParser.RULE_namelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamelist" ):
                listener.enterNamelist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamelist" ):
                listener.exitNamelist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamelist" ):
                return visitor.visitNamelist(self)
            else:
                return visitor.visitChildren(self)




    def namelist(self):

        localctx = luaParser.NamelistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_namelist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(luaParser.NAME)
            self.state = 201
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 197
                    self.match(luaParser.T__14)
                    self.state = 198
                    self.match(luaParser.NAME) 
                self.state = 203
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExplistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(luaParser.ExpContext)
            else:
                return self.getTypedRuleContext(luaParser.ExpContext,i)


        def getRuleIndex(self):
            return luaParser.RULE_explist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplist" ):
                listener.enterExplist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplist" ):
                listener.exitExplist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExplist" ):
                return visitor.visitExplist(self)
            else:
                return visitor.visitChildren(self)




    def explist(self):

        localctx = luaParser.ExplistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_explist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 204
            self.exp(0)
            self.state = 209
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==luaParser.T__14:
                self.state = 205
                self.match(luaParser.T__14)
                self.state = 206
                self.exp(0)
                self.state = 211
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
